infrastructure/core/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.kubernetes.io/target: longhorn.${DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure #,web
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth-middleware@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: traefik-cert-prod
      hosts:
        - longhorn.${DOMAIN}
